# dao-sc

./: .gitignore  Cargo.toml  README.md  erdpy.data-storage.json  mxpy.data-storage.json  rustfmt.toml
entity/: Cargo.toml
entity/meta/: Cargo.toml
entity/meta/src/: main.rs
entity/src/: config.rs  contract.rs  esdt.rs  features.rs  lib.rs  permission.rs  plug.rs
entity/src/governance/: config.rs  configurable.rs  errors.rs  events.rs  mod.rs  proposal.rs  storage.rs  token.rs  types.rs  vote.rs
entity/tests/: _init.rs  _setup.rs  cancel_tests.rs  config_gov_token_change_tests.rs  config_gov_token_init_tests.rs  config_gov_token_issue_tests.rs  config_gov_token_remove_tests.rs  config_gov_token_tests.rs  config_min_proposal_vote_weight_tests.rs  config_min_propose_weight_change_tests.rs  config_min_propose_weight_tests.rs  config_min_vote_weight_change_tests.rs  config_min_vote_weight_tests.rs  config_plug_tests.rs  config_quorum_change_tests.rs  config_quorum_tests.rs  config_vote_token_lock_tests.rs  config_voting_period_change_tests.rs  config_voting_period_tests.rs  contract_tests.rs  direct_execute_tests.rs  execute_action_tests.rs  execute_leaderless_tests.rs  execute_permissions_tests.rs  execute_tests.rs  execute_truthfulness_tests.rs  features_tests.rs  gov_token_issue_tests.rs  permission_actual_tests.rs  permission_create_tests.rs  permission_role_assign_tests.rs  permission_role_create_tests.rs  permission_role_remove_tests.rs  permission_role_unassign_tests.rs  permission_tests.rs  proposal_execute_permissions_tests.rs  proposal_execute_tests.rs  proposal_propose_tests.rs  proposal_status_leaderless_tests.rs  proposal_status_plug_tests.rs  (+29 more)
entity/wasm/: Cargo.toml
entity/wasm/src/: lib.rs
interaction/: entity.sh  manage.snippets.sh  manager.sh  snippets.sh
manager/: Cargo.toml
manager/meta/: Cargo.toml
manager/meta/src/: main.rs
manager/src/: config.rs  cost.rs  credits.rs  dex.rs  edst.rs  esdt.rs  events.rs  factory.rs  features.rs  lib.rs  organization.rs
manager/tests/: admins_tests.rs  credits_available_tests.rs  credits_boost_external_tests.rs  credits_boost_tests.rs  credits_daily_cost_tests.rs  credits_management_tests.rs  credits_view_tests.rs  entity_create_finalize_tests.rs  entity_create_tests.rs  entity_token_create_tests.rs  entity_token_register_tests.rs  features_tests.rs  forward_tests.rs  setup.rs
manager/wasm/: Cargo.toml
manager/wasm/src/: lib.rs
meta/: Cargo.toml
meta/src/: main.rs
src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
