[package]
name = "entity"
version = "0.1.0"
authors = ["Micha Vie <micha@freeiam.com>", "Superciety <hello@superciety.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.29.2"

[dev-dependencies.elrond-wasm-debug]
version = "0.29.2"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
