[package]
name = "fellowships-meta"
version = "0.1.0"
authors = ["Micha Vie <micha@freeiam.com>", "Superciety <hello@superciety.com>"]
edition = "2018"
publish = false

[dependencies.fellowships]
path = ".."

[dependencies.elrond-wasm]
version = "0.25.0"

[dependencies.elrond-wasm-debug]
version = "0.25.0"
