[package]
name = "fellowships-wasm"
version = "0.1.0"
authors = ["Micha Vie <micha@freeiam.com>", "Superciety <hello@superciety.com>"]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.fellowships]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.25.0"

[dependencies.elrond-wasm-output]
version = "0.25.0"
features = [ "wasm-output-mode",]
