[package]
name = "manager-meta"
version = "0.1.0"
authors = ["Micha Vie <micha@freeiam.com>", "Superciety <hello@superciety.com>"]
edition = "2018"
publish = false

[dependencies.manager]
path = ".."

[dependencies.elrond-wasm]
version = "0.29.0"

[dependencies.elrond-wasm-debug]
version = "0.29.0"
