[package]
name = "manager-wasm"
version = "1.0.0"
authors = ["Micha Vie <micha@peerme.io>", "PeerMe <hello@peerme.io>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["."]

[dev-dependencies]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.manager]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.43.5"
